# scry-mcp

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  product-feedback.md
src/: board.rs  error.rs  gallery.rs  main.rs  python.rs  render.rs  server.rs
supabase/: config.toml
supabase/functions/scry/: index.ts  rhai_wasm.ts
supabase/functions/scry-view/: index.ts
supabase/functions/scry/rhai-sandbox/: Cargo.toml
supabase/functions/scry/rhai-sandbox/src/: lib.rs
