[package]
name = "scry-mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
rmcp = { version = "0.16", features = ["server", "macros", "transport-io", "schemars"] }
pyo3 = { version = "0.28", features = ["auto-initialize", "py-clone"] }
resvg = "0.47"
usvg = "0.47"
tiny-skia = "0.12"
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std", "sync", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
base64 = "0.22"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
chrono = { version = "0.4", features = ["serde"] }
async-stream = "0.3"
futures = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }
clap = { version = "4", features = ["derive"] }
